<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.karrar.movieapp.ui.login.LoginViewModel" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context=".ui.login.LoginFragment">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:shadowColor="@color/shade_secondary_color"
            android:src="@drawable/login_movie"
            app:layout_constraintHeight_percent="0.35"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView"
            style="@style/SemiBold.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/login_to_your_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:hint="@string/username"
            app:helperText="@{viewModel.loginUIState.userNameHelperText}"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:startIconDrawable="@drawable/ic_profile">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:text="@={viewModel.userName}"
                android:textColor="@color/shade_secondary_color"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:hint="@string/password"
            app:helperText="@{viewModel.loginUIState.passwordHelperText}"
            app:layout_constraintTop_toBottomOf="@+id/user_name"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/shade_secondary_color"
            app:startIconDrawable="@drawable/ic_key">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:text="@={viewModel.password}"
                android:textColor="@color/shade_secondary_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/containedButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_extra_large"
            android:enabled="@{viewModel.loginUIState.validForm}"
            app:isVisible="@{viewModel.loginValidation}"
            android:onClick="@{()->viewModel.onClickLogin()}"
            android:text="@string/login"
            android:textAppearance="@style/SemiBold.Medium"
            android:textColor="@color/white_primary"
            app:backgroundTint="@color/color_states_material_button"
            app:cornerRadius="@dimen/radius_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:hideIfTrue="@{viewModel.loginUIState.loading}" />


        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_extra_large"
            android:indeterminate="true"
            android:visibility="gone"
            app:indicatorColor="@color/brand_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:isVisible="@{viewModel.loginUIState.loading}"
            app:trackColor="@color/shade_secondary_color" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/don_t_have_an_account"
            android:textAppearance="@style/Regular.Medium.Primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.42"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:onClick="@{()->viewModel.onClickSignUp()}"
            android:text="@string/sign_up"
            android:textAppearance="@style/Regular.Medium.Primary"
            android:textColor="@color/brand_color"
            app:layout_constraintBottom_toBottomOf="@+id/materialTextView"
            app:layout_constraintStart_toEndOf="@+id/materialTextView"
            app:layout_constraintTop_toTopOf="@+id/materialTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>