<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.karrar.movieapp.ui.myList.MyListsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet_corners"
        android:paddingVertical="@dimen/spacing_large">

        <TextView
            android:id="@+id/primary_text"
            style="@style/SemiBold.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/plus_jakarta_sans_semibold"
            android:text="@string/create_a_new_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:fontFamily="@font/plus_jakarta_sans_regular"
            android:text="@string/explore_some_movies_on_home_or_search_and_then_create_your_movie_list"
            android:textAlignment="center"
            android:textColor="@color/shade_secondary_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/primary_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/list_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_large"
            android:hint="@string/list_name"
            android:textColorHint="@color/shade_secondary_color"
            app:hintTextColor="@color/shade_secondary_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:afterTextChanged="@{(text) -> viewModel.onListNameInputChange(text)}"
                android:fontFamily="@font/plus_jakarta_sans_regular"
                android:inputType="textPersonName"
                android:maxLength="15"
                android:maxLines="1"
                android:textColor="@color/shade_primary_color"
                android:textCursorDrawable="@drawable/color_cursor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginBottom="24dp"
            android:enabled="@{!viewModel.createListDialogUIState.mediaListName.empty}"
            android:fontFamily="@font/plus_jakarta_sans_semibold"
            android:onClick="@{()->viewModel.onClickAddList()}"
            android:paddingVertical="@dimen/spacing_medium"
            android:text="@string/create"
            android:textAllCaps="false"
            android:textColor="@color/white_primary"
            app:backgroundTint="@color/color_states_material_button"
            app:cornerRadius="@dimen/spacing_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

