<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.karrar.movieapp.ui.home.HomeViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color">

        <TextView
            android:id="@+id/textView3"
            style="@style/SemiBold.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/tv_shows"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_top_rated"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/spacing_medium"
            android:background="@color/brand_color"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@+id/image_popular"
            app:layout_constraintEnd_toStartOf="@+id/image_latest"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/image_latest"
            app:posterImage="@{viewModel.topRatedTvShow.toData()[0].imageUrl}"
            app:shapeAppearanceOverlay="@style/CardCorners.Medium" />

        <TextView
            android:id="@+id/text_top_rated"
            style="@style/SemiBold.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            android:text="@string/top_rated"
            app:layout_constraintBottom_toBottomOf="@+id/image_top_rated"
            app:layout_constraintStart_toStartOf="@+id/image_top_rated" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_latest"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_small"
            android:background="@color/brand_color"
            android:scaleType="fitXY"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/image_top_rated"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:posterImage="@{viewModel.latestTvShow.toData()[0].imageUrl}"
            app:shapeAppearanceOverlay="@style/CardCorners.Medium" />

        <TextView
            android:id="@+id/text_latest"
            style="@style/Regular.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_small"
            android:text="@string/latest"
            app:layout_constraintBottom_toBottomOf="@+id/image_latest"
            app:layout_constraintStart_toStartOf="@+id/image_latest" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_popular"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:background="@color/brand_color"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@+id/image_latest"
            app:layout_constraintStart_toStartOf="@+id/image_latest"
            app:layout_constraintTop_toBottomOf="@+id/image_latest"
            app:posterImage="@{viewModel.popularTvShow.toData()[0].imageUrl}"
            app:shapeAppearanceOverlay="@style/CardCorners.Medium" />

        <TextView
            android:id="@+id/text_popular"
            style="@style/Regular.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_small"
            android:text="@string/popular"
            app:layout_constraintBottom_toBottomOf="@+id/image_popular"
            app:layout_constraintStart_toStartOf="@+id/image_popular" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>