<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.karrar.movieapp.ui.search.SearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color">

        <EditText
            android:text="@={viewModel.searchText}"
            android:id="@+id/input_search"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:background="@drawable/edit_text_background"
            android:inputType="text"
            android:maxLines="1"
            android:lines="1"
            android:hint="@string/search_hint"
            android:textColorHint="@color/shade_ternary_color"
            android:textColor="@color/shade_primary_color"
            style="@style/Regular.Medium"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="@dimen/spacing_small"
            android:paddingStart="@dimen/spacing_small"
            android:textCursorDrawable="@color/brand_color"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_media_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:checkedChip="@id/chip_movie"
            style="@style/Widget.Material3.ChipGroup"
            app:layout_constraintTop_toBottomOf="@id/input_search"
            app:layout_constraintStart_toStartOf="@id/input_search"
            app:selectionRequired="true"
            app:singleSelection="true"
            android:layout_marginTop="@dimen/spacing_medium"
            app:chipSpacingHorizontal="12dp">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Chip.Regular.Small"
                android:textColor="@color/chip_text"
                android:paddingVertical="6dp"
                android:paddingHorizontal="@dimen/spacing_medium"
                app:checkedIconEnabled="false"
                app:chipCornerRadius="@dimen/spacing_small"
                android:text="@string/movies_chip"
                android:onClick="@{() -> viewModel.getMovies()}"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_series"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Chip.Regular.Small"
                android:textColor="@color/chip_text"
                android:paddingVertical="6dp"
                android:paddingHorizontal="@dimen/spacing_medium"
                app:checkedIconEnabled="false"
                app:chipCornerRadius="@dimen/spacing_small"
                android:text="@string/tv_shows_chip"
                android:onClick="@{() -> viewModel.getSeries()}"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_actors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Chip.Regular.Small"
                android:textColor="@color/chip_text"
                android:paddingVertical="6dp"
                android:paddingHorizontal="@dimen/spacing_medium"
                app:checkedIconEnabled="false"
                app:chipCornerRadius="@dimen/spacing_small"
                android:text="@string/actors_label"
                android:onClick="@{() -> viewModel.getActors()}"/>
        </com.google.android.material.chip.ChipGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_media"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/chip_group_media_type"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/input_search"
            app:layout_constraintEnd_toEndOf="@id/input_search"
            android:paddingVertical="@dimen/spacing_small"
            android:clipToPadding="false"
            tools:listitem="@layout/item_media"
            app:items="@{viewModel.media.toData()}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            app:setMediaVisibility="@{viewModel.mediaType}"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_person"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/chip_group_media_type"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/input_search"
            app:layout_constraintEnd_toEndOf="@id/input_search"
            android:paddingVertical="@dimen/spacing_small"
            android:clipToPadding="false"
            app:items="@{viewModel.person.toData()}"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            app:spanCount="3"
            app:setPersonVisibility="@{viewModel.mediaType}"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>